<resources>
    <string name="app_name">CalendarExam411</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="labelSun">Sun</string>
    <string name="labelMon">Mon</string>
    <string name="labelTue">Tue</string>
    <string name="labelWed">Wed</string>
    <string name="labelThu">Thu</string>
    <string name="labelFri">Fri</string>
    <string name="labelSat">Sat</string>
    <string name="gotoday">goto Today</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="send_to">Send To</string>
</resources>