<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalendarView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16"
        android:orientation="vertical"
        android:weightSum="40">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:weightSum="20">

            <TextView
                android:id="@+id/txtYearMonth"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:fontFamily="@font/notosansbold"
                android:gravity="center_horizontal|center_vertical"
                android:text="TextView"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/softred"
                android:fontFamily="@font/notosansbold"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/labelSun"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/light_blue_50"
                android:fontFamily="@font/notosansbold"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/labelMon"
                android:textColor="@color/light_blue_500" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/light_blue_50"
                android:fontFamily="@font/notosansbold"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/labelTue"
                android:textColor="@color/light_blue_500" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/light_blue_50"
                android:fontFamily="@font/notosansbold"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/labelWed"
                android:textColor="@color/light_blue_500" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/light_blue_50"
                android:fontFamily="@font/notosansbold"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/labelThu"
                android:textColor="@color/light_blue_500" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/light_blue_50"
                android:fontFamily="@font/notosansbold"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/labelFri"
                android:textColor="@color/light_blue_500" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/softblue"
                android:fontFamily="@font/notosansbold"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/labelSat"
                android:textColor="@color/white" />
        </LinearLayout>

        <com.billcoreatech.calendarexam411.util.MyGridView
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:descendantFocusability="blocksDescendants"
            android:listSelector="@drawable/gridview_selector"
            android:numColumns="7">

        </com.billcoreatech.calendarexam411.util.MyGridView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/textDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_horizontal|center_vertical"
                android:text="TextView" />

            <Button
                android:id="@+id/btnLoadImage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="+" />

            <Button
                android:id="@+id/btnSaveImage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="-" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="13"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>